<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="163dp"
        android:layout_height="163dp"
        android:layout_marginTop="25dp"
        android:background="@color/light_gray"
        android:backgroundTint="@color/light_gray"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/im_avatar_p"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:background="@drawable/avatar"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/folow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/count_of_followers_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="1k"
                android:textColor="@color/main_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/followers"
                android:textColor="@color/main_text"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="204dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/count_of_following_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="342"
                android:textColor="@color/main_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/following"
                android:textColor="@color/main_text"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folow">

        <TextView
            android:id="@+id/tv_name_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="Name "
            android:textColor="@color/main_text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_last_name_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="Last name"
            android:textColor="@color/main_text"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_desc_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/dark_gray_blue"
        android:textSize="13sp"
        android:text="@string/profile_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_profile_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons"
        app:tabIndicatorColor="@color/dark_gray_blue"
        app:tabSelectedTextColor="@color/blue_gray"
        app:tabTextColor="@color/main_text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/posts"
            android:textColor="@color/main_text"
            android:textSize="13sp" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_posts_user_p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_profile_p"
        tools:listitem="@layout/post_item" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_p">
        <Button
            android:id="@+id/btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/blue"
            android:foregroundGravity="center_horizontal"
            android:visibility="visible"
            android:text="@string/follow"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_semi_bold"/>
        <Button
            android:id="@+id/btn_unfollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/dark_gray_blue"
            android:foregroundGravity="center_horizontal"
            android:visibility="gone"
            android:text="@string/unfollow"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_semi_bold"/>
        <Button
            android:id="@+id/btn_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/white"
            android:foregroundGravity="center_horizontal"
            android:text="@string/message"
            android:textColor="@color/main_text"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_semi_bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>