<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.music.SearchMusicFragment"
    android:background="@color/background">
    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/search_music"
        android:textColor="@color/main_text"
        android:textSize="38sp"
        android:fontFamily = "@font/poppins_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/ed_search_music"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:background="@drawable/search_background"
        android:drawablePadding="10dp"
        android:hint="@string/find_music"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:textColor="@color/main_text"
        android:textColorHint="@color/dark_gray_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />
    <ImageView
        android:id="@+id/im_search_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="@id/ed_search_music"
        app:layout_constraintTop_toTopOf="@id/ed_search_music"
        />
    <TextView
        android:id="@+id/tv_artists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/artists"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        android:fontFamily = "@font/poppins_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_search_music"
      />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_artists"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_artists"
        tools:listitem="@layout/music_item" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_artists"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_artists"
        tools:listitem="@layout/music_item" />
    <TextView
        android:id="@+id/tv_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/tracks"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_artists" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tracks"
        tools:listitem="@layout/music_item" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_tracks"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tracks"
        tools:listitem="@layout/music_item" />


</androidx.constraintlayout.widget.ConstraintLayout>