<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.music.MusicFragment">


    <TextView
        android:id="@+id/music_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/music"
        android:textColor="@color/main_text"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_music"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_header"
        app:tabIndicatorColor="@color/dark_gray_blue"
        app:tabSelectedTextColor="@color/blue_gray"
        app:tabTextColor="@color/main_text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/my_music"
            android:textColor="@color/main_text"
            android:textSize="13sp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/all_music"
            android:textColor="@color/main_text"
            android:textSize="13sp" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_music"
        tools:listitem="@layout/track_item" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="gone"
        android:layout_marginEnd="40dp"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_music"
        tools:listitem="@layout/track_item" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_searchTrack_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:visibility="gone"
        android:layout_marginEnd="40dp"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_music"
        tools:listitem="@layout/track_item" />
</androidx.constraintlayout.widget.ConstraintLayout>